--- a/education.html
+++ b/education.html
@@ -2,150 +2,132 @@
 <html lang="en">
 
 <head>
-    <title>Portfolio</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Portfolio</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/education.css">
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a href="./about.html" class="navbar-brand">Uzair Suria</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a href="./about.html" class="navbar-brand">Uzair Suria</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a href="./about.html" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./education.html" class="nav-link">Formal Education</a>
-                    </li>
-                    <li class="nav-item dropdown active">
-                        <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Portfolio
-                        </a>
-                        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item bg-secondary text-light ddp" href="./projects.html">Projects</a>
-                            <a class="dropdown-item bg-dark text-light ddc" href="./webdev.html">Web Development</a>
-                            <a class="dropdown-item bg-dark text-light ddc" href="./ml.html">Machine Learning</a>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a href="./contact.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a href="./about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item active">
+            <a href="./education.html" class="nav-link">Formal Education</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Portfolio
+            </a>
+            <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item bg-dark text-light ddp" href="./projects.html">Projects</a>
+              <a class="dropdown-item bg-dark text-light ddc" href="./webdev.html">Web Development</a>
+              <a class="dropdown-item bg-dark text-light ddc" href="./ml.html">Python &amp; Machine Learning</a>
             </div>
-        </nav>
-    </header>
+          </li>
+        </ul>
+        
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="./contact.html" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-    <main>
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb m-0">
-                <li class="breadcrumb-item" aria-current="page"><a href="./about.html">About</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Projects</li>
-            </ol>
-        </nav>
+  <main>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb m-0">
+        <li class="breadcrumb-item" aria-current="page"><a href="./about.html">About</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Education</li>
+      </ol>
+    </nav>
 
 
-        <div class="main-content">
-            <div class="container-fluid">
-                <!-- <h1>PORTFOLIO LANDING PAGE</h1> -->
-                <div class="row">
-                    <div class="col-lg-6 pb-5 pt-2">
-                        <div class="card h-100 bg-dark">
-                            <a href="./webdev.html">
-                                <img src="./img/webdev.jpg" alt="code on a computer screen" class="card-img-top">
-                            </a>
-
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    Web Development
-                                </h5>
-                                <p class="card-text">
-                                    Web development is the work involved in developing a Web site for the Internet
-                                    (World Wide Web) or an intranet (a private network). Web development can range from
-                                    developing a simple single static page of plain text to complex Web-based Internet
-                                    applications (Web apps), electronic businesses, and social network services
-                                </p>
-                                <p class="text-center">
-                                    <a class="btn btn-outline-light hover-pill" href="./webdev.html" role="button">Web
-                                        Development Projects</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 pb-5 pt-2">
-                        <div class="card h-100 bg-dark">
-                            <a href="./ml.html">
-                                <img src="./img/ml.jpg" alt="a picture of robot" class="card-img-top">
-                            </a>
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    Python &amp; Machine Learning
-                                </h5>
-                                <p class="card-text">
-                                    <p class="">
-                                        Python is a powerful general-purpose programming language. It can be used to
-                                        develop simple utility softwares and back-end web development to complex machine
-                                        learning models.Machine learning (ML) is an application of artificial
-                                        intelligence (AI) that provides systems the ability to automatically learn and
-                                        improve from experience without being explicitly programmed
-                                    </p>
-                                    <p class="text-center">
-                                        <a class="btn btn-outline-light hover-pill" href="./ml.html"
-                                            role="button">Python &amp; ML Projects</a>
-                                    </p>
-
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
+    <div class="main-content">
+      <div class="container-fluid mt-5 mb-5">
+        <div class="row">
+          <div class="col-md-6 offset-md-3">
+            <h4>Formal Education</h4>
+            <ul class="timeline">
+              <li>
+                <a target="_blank" href="#">Bach. Mech. Engg.</a>
+                <a href="#" class="float-right">Jan 2016 - Jan 2020</a>
+                <p>
+                  <strong>CGPA: 3.79/4.00</strong><br>
+                  National University of Sciences and Technology (NUST - PNEC), <br>
+                  Karachi, Pakistan
+                </p>
+              </li>
+              <li>
+                <a href="#">CIE Advanced Level</a>
+                <a href="#" class="float-right">Aug 2012 - July 2014</a>
+                <p>
+                  <strong>IBCC Equivalence: 82.27</strong><br>
+                  The City School, Gulshan Campus, <br>
+                  Karachi, Pakistan
+                </p>
+              </li>
+              <li>
+                <a href="#">CIE Ordinary Level</a>
+                <a href="#" class="float-right">Aug 2010 - Jul 2012</a>
+                <p>
+                  <strong>IBCC Equivalence: 81.88</strong><br>
+                  Suffah Saviour School, Shahrah-e-Faisal Campus, <br>
+                  Karachi, Pakistan
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+    </div>
 
 
-    </main>
-    <footer>
-        <div class="container-fluid py-4">
-            <div class="row">
-                <div class="col-6">
-                    <a href="./contact.html">Contact</a>
-                </div>
-                <div class="col-6 text-right">
-                    <a href="./projects.html">Portfolio</a>
-                </div>
-            </div>
+  </main>
+  <footer>
+    <div class="container-fluid py-4">
+      <div class="row">
+        <div class="col-6">
+          <a href="./contact.html">Contact</a>
         </div>
-    </footer>
+        <div class="col-6 text-right">
+          <a href="./projects.html">Portfolio</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
