--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,6 @@
                         </div>
                     </li>
                 </ul>
-                </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a href="./contact.html" class="nav-link">Contact</a>
@@ -71,7 +70,7 @@
                     <div class="col-lg-6 pb-5 pt-2">
                         <div class="card h-100 bg-dark">
                             <a href="./webdev.html">
-                                <img src="./img/webdev.jpg" alt="" class="card-img-top">
+                                <img src="./img/webdev.jpg" alt="code on a computer screen" class="card-img-top">
                             </a>
 
                             <div class="card-body">
@@ -93,8 +92,8 @@
                     </div>
                     <div class="col-lg-6 pb-5 pt-2">
                         <div class="card h-100 bg-dark">
-                            <a href="./ml.html" target="">
-                                <img src="./img/ml.jpg" alt="" class="card-img-top">
+                            <a href="./ml.html">
+                                <img src="./img/ml.jpg" alt="a picture of robot" class="card-img-top">
                             </a>
                             <div class="card-body">
                                 <h5 class="card-title">
@@ -113,7 +112,6 @@
                                             role="button">Python &amp; ML Projects</a>
                                     </p>
 
-                                </p>
                             </div>
                         </div>
                     </div>
