--- a/ml.html
+++ b/ml.html
@@ -45,7 +45,7 @@
             </div>
           </li>
         </ul>
-        </ul>
+
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a href="./contact.html" class="nav-link">Contact</a>
@@ -103,16 +103,15 @@
               </h5>
               <code class="mt-0">[python][RegEx]</code>
               <p class="card-text mt-3">
-                <p class="">
-                  A python script to extract all the web-links from a given webpage address.
-                </p>
-                <p class="text-center">
-                  <a class="btn btn-outline-light hover-pill"
-                    href="https://github.com/uzair-suria/website-links-extractor" target="_blank" role="button">Show
-                    me</a>
-                </p>
-
+                A python script to extract all the web-links from a given webpage address.
               </p>
+              <p class="text-center">
+                <a class="btn btn-outline-light hover-pill"
+                  href="https://github.com/uzair-suria/website-links-extractor" target="_blank" role="button">Show
+                  me</a>
+              </p>
+
+
             </div>
           </div>
         </div>
@@ -129,16 +128,16 @@
               </h5>
               <code class="mt-0">[python][SQLite][Tweepy]</code>
               <p class="card-text mt-3">
-                <p class="">
-                  A python script to connect with twitter API and crawl the twitter upon input of initial screen name,
-                  to retrieve screen name of twitter accounts being followed.
-                </p>
-                <p class="text-center">
-                  <a class="btn btn-outline-light hover-pill" href="https://github.com/uzair-suria/py-twitter-spider"
-                    target="_blank" role="button">Show me</a>
-                </p>
-
+                A python script to connect with twitter API and crawl the twitter upon input of initial screen name,
+                to retrieve screen name of twitter accounts being followed.
               </p>
+
+              <p class="text-center">
+                <a class="btn btn-outline-light hover-pill" href="https://github.com/uzair-suria/py-twitter-spider"
+                  target="_blank" role="button">Show me</a>
+              </p>
+
+
             </div>
           </div>
         </div>
@@ -154,17 +153,16 @@
               </h5>
               <code class="mt-0">[machine-learning][python][sklearn]</code>
               <p class="card-text mt-3">
-                <p class="">
-                  A machine learning model that uses 14 medical parameters to predicts whether a person has a heart
-                  disease or not.
-                </p>
-                <p class="text-center">
-                  <a class="btn btn-outline-light hover-pill"
-                    href="https://github.com/uzair-suria/heart-disease-sklearn-model" target="_blank" role="button">Show
-                    me</a>
-                </p>
-
+                A machine learning model that uses 14 medical parameters to predicts whether a person has a heart
+                disease or not.
               </p>
+              <p class="text-center">
+                <a class="btn btn-outline-light hover-pill"
+                  href="https://github.com/uzair-suria/heart-disease-sklearn-model" target="_blank" role="button">Show
+                  me</a>
+              </p>
+
+
             </div>
           </div>
         </div>
@@ -180,26 +178,25 @@
               </h5>
               <code class="mt-0">[machine-learning][python][sklearn]</code>
               <p class="card-text mt-3">
-                <p class="">
-                  A machine learning model trained on historical data to predict current sale price of bulldozer.
-                </p>
-                <p class="text-center">
-                  <a class="btn btn-outline-light hover-pill"
-                    href="https://github.com/uzair-suria/bulldozer-sales-price-predictor" target="_blank"
-                    role="button">Show
-                    me</a>
-                </p>
-
+                A machine learning model trained on historical data to predict current sale price of bulldozer.
               </p>
+              <p class="text-center">
+                <a class="btn btn-outline-light hover-pill"
+                  href="https://github.com/uzair-suria/bulldozer-sales-price-predictor" target="_blank"
+                  role="button">Show
+                  me</a>
+              </p>
+
             </div>
           </div>
         </div>
 
-
       </div>
+    </div>
 
 
   </main>
+
   <footer>
     <div class="container-fluid py-4">
       <div class="row">
