Changed text alignment of contact links
Changed the layout breakpoint to sm from xs. The links will be left aligned in medium view while on mobile view they will be centered. Finally, added margin classes to icons

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 
         <h1 class="text-center mb-5">Contact</h1>
         <div class="row">
-          <div class="col-xs-12 col-md-6 mb-3 text-center">
+          <div class="col-sm-12 col-md-6 mb-3 text-md-left">
             <!-- <i class="material-icons md-48">contact_mail</i> -->
             <i class="fas fa-at fa-2x"></i>
             <a class="icon-label" href="mailto:uzair.a.suria@gmail.com">
@@ -82,7 +82,7 @@
             </a>
           </div>
 
-          <div class="col-xs-12 col-md-6 mb-3 text-center">
+          <div class="col-sm-12 col-md-6 mb-3 text-md-left">
             <!-- <i class="material-icons md-48">contact_mail</i> -->
             <i class="fab fa-twitter fa-2x"></i>
             <a class="icon-label" href="https://twitter.com/uzairazizsuria">
@@ -90,7 +90,7 @@
             </a>
           </div>
 
-          <div class="col-xs-12 col-md-6 mb-3 text-center">
+          <div class="col-sm-12 col-md-6 mb-3 text-md-left">
             <!-- <i class="material-icons md-48">contact_mail</i> -->
             <i class="fab fa-linkedin fa-2x"></i>
             <a class="icon-label" href="https://www.linkedin.com/in/uzair-suria/">
