--- a/webdev.html
+++ b/webdev.html
@@ -116,7 +116,7 @@
         <div class="col-lg-6 pb-5 pt-2">
           <div class="card h-100 bg-dark">
             <a href="./gallery.html" target="_blank">
-              <img src="./img/gallery.jpg" alt="image gallery" class="image of photography reel">
+              <img src="./img/gallery.jpg" alt="image of photography reel">
             </a>
             <div class="card-body">
               <h5 class="card-title mb-0">
