--- a/ml.html
+++ b/ml.html
@@ -145,7 +145,7 @@
         <div class="col-lg-6 pb-5 pt-2">
           <div class="card h-100 bg-dark">
             <a href="https://github.com/uzair-suria/heart-disease-sklearn-model" target="_blank">
-              <img src="./img/heart-attack.jpg" alt="" class="image of photography reel">
+              <img src="./img/heart-attack.jpg" alt="heart rate plot">
             </a>
             <div class="card-body">
               <h5 class="card-title mb-0">
@@ -170,7 +170,7 @@
         <div class="col-lg-6 pb-5 pt-2">
           <div class="card h-100 bg-dark">
             <a href="https://github.com/uzair-suria/bulldozer-sales-price-predictor" target="_blank">
-              <img src="./img/bulldozer.jpg" alt="" class="image of photography reel">
+              <img src="./img/bulldozer.jpg" alt="image of a buldozer">
             </a>
             <div class="card-body">
               <h5 class="card-title mb-0">
